<resources>
    <string name="app_name">المرشد</string>
    <string name="action_settings">الاعدادات</string>
    <string name="section_format">مرحبا من سكشن</string>
    <string name="report_missing_person">التبليغ عن شخص مفقود</string>
    <string name="missing_image">اختر الوسيله</string>
    <string name="upload_image_warning">من فضلك ادخل صورة </string>
    <string name="insert_name_warning">من فضلك ادخل اسم المفقود</string>
    <string name="insert_location_warning">من فضلك ادخل المكان</string>
    <string name="uploading_text">جارى الرفع</string>
    <string name="request_enabled_location">من فضلك فعَل اللوكشن</string>
    <string name="title_missing_people">الاشخاص المفقودون</string>
    <string name="title_search_by">البحث بواسطة</string>
    <string name="name_button">الاسم</string>
    <string name="image_button">الصورة</string>
    <string name="upload_from">الرفع من</string>
    <string name="camera_text">الكاميرا</string>
    <string name="gallary_text">الملفات</string>
    <string name="check_connection">تاكد من اتصالك بالانترنت</string>
    <string name="loading_text">جار التحميل</string>
    <string name="image_nissed">لم يتم اختيار الصورة</string>
    <string name="images_not_found">لا يوجد صورة مشابهه</string>
    <string name="title_activity_report_missing_persons">report_missing_persons</string>
    <string name="MainPlaces">الأماكن الرئيسية</string>
    <string name="Makkah">مكة</string>
    <string name="Madina">المدينة</string>
    <string name="groupTracking">تتبع الحملات</string>
    <string name="Done">تم</string>
    <string name="create">إنشاء</string>
    <string name="create_group">إنشاء مجموعة</string>
    <string name="Group_Name">اسم المجموعة</string>
    <string name="Define_Group_Location">حدد موقع المجموعة</string>
    <string name="Group_Phone">رقم الجوال</string>
    <string name="missing_Person_Page">البحث عن شخص مفقود</string>
    <string name="manage_Groups">إدارة المجموعات</string>
    <string name="group_tracking">تتبع الحملات</string>
    <string name="Main_page">الصفحة الرئيسية</string>
    <string name="define_my_location">سجل عنوانى</string>
    <string name="upload_image">ارفع صورة</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="report">بلغ</string>
    <string name="my_location">احداثياتى</string>
    <string name="please_wait">انتظر من فضلك</string>
    <string name="get_location_failed">خطأ فى الحصول على العنوان</string>
    <string name="status_changed"> من فضلك أعد المحاوله</string>
    <string name="get_route">عرض المسار</string>
    <string name="found">وجد</string>
    <string name="upload_document">ارفق التصريح</string>
    <string name="submit_text">تاكيد</string>
    <string name="choose_text">اختار</string>
    <string name="email_person">الايميل</string>
    <string name="name_text">الاسم</string>
    <string name="accept_text">قبول</string>
    <string name="reject_text">رفض</string>
    <string name="phone_text">رقم التليفون</string>
    <string name="email_text">البريد الالكترونى</string>
    <string name="request_type_text">نوع المستخدم</string>
    <string name="show_document_text">عرض التصريح</string>
    <string name="show_document_button">اظهارالتصريح</string>
    <string name="please_enter_code">من فضلك ادخل كود التأكيد</string>
    <string name="enter_confirmation_code">من فضلك ادخل كود التاكيد</string>
    <string name="edit_button_menu">تعديل</string>
    <string name="delete_button_menu">حذف</string>
</resources>
