<?xml version="1.0" encoding="utf-8"?><!--layout file for method of search by camera or gallary-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shap"
    android:paddingBottom="5dp"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    android:paddingTop="5dp"
    android:layoutDirection="rtl"
    >

    <TextView
        android:id="@+id/upload_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_from"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_from"
        android:paddingBottom="2dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp">

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@drawable/white_shape"
            android:text="@string/camera_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/gallary_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/white_shape"
            android:text="@string/gallary_text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</RelativeLayout>