<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    tools:context="com.example.Alharm.alharm.Main_Page">
    <!---->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:id="@+id/relativeLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"
            android:text="@string/Main_page"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/menu"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="21dp"
            android:onClick="openDrawer"
            />

    </RelativeLayout>
    <ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp">
    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

        <Button
            android:id="@+id/report_missing_person_bt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_shape"
            android:gravity="center"
            android:onClick="reportMissingPersone"
            android:text="@string/report_missing_person"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/missingPersonPage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_shape"
            android:gravity="center"
            android:onClick="missingPersonPage"
            android:text="@string/missing_Person_Page"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"

            />

        <Button
            android:id="@+id/main_places_bt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_shape"
            android:gravity="center"
            android:onClick="MainPlaces"
            android:text="@string/MainPlaces"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/groupTracking"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_shape"
            android:gravity="center"
            android:onClick="groupTracking"
            android:text="@string/group_tracking"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"

            android:textStyle="bold" />

        <Button
            android:id="@+id/manageGroups"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/white_shape"
            android:gravity="center"
            android:onClick="ManageGroups"
            android:text="@string/manage_Groups"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            android:textStyle="bold"
            />


    </LinearLayout>
</ScrollView>

</RelativeLayout>
