<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:padding="16dp"
    tools:context="com.example.Alharm.alharm.authentication.SignUp.UploadDocument">


    <TextView
        android:id="@+id/text_upload_document"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_document"
        android:textSize="24sp" />


    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_upload_document"
        android:layout_marginStart="24dp"
        android:background="@drawable/white_shape"
        android:gravity="center"
        android:text="@string/choose_text"
        android:textColor="@color/colorPrimary" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_below="@+id/upload"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/document_img"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="fitXY"
            android:src="@drawable/placeholder128" />


        <ImageButton
            android:id="@+id/remove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@null"
            android:src="@drawable/cancel" />
    </FrameLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="13dp"
        android:background="@drawable/white_shape"
        android:gravity="center"
        android:text="@string/submit_text"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>
