<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:layoutDirection="rtl"

    tools:context="com.example.Alharm.alharm.GuidePerson.CreateGroup">

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:text="@string/create_group"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignEnd="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView3"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="187dp"
                android:background="@android:color/transparent"
                android:hint="@string/Group_Name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_alignEnd="@+id/group_name"
                android:layout_alignStart="@+id/group_name"
                android:layout_below="@id/group_name"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"

                android:background="@color/colorPrimary" />


            <EditText
                android:id="@+id/group_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/view"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="31dp"
                android:background="@android:color/transparent"
                android:hint="@string/Group_Phone"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_alignEnd="@+id/group_phone"
                android:layout_alignStart="@+id/group_phone"
                android:layout_below="@id/group_phone"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimary" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/view2"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/white_shape"
                android:onClick="defineGroupLocation"
                android:text="@string/Define_Group_Location"
                android:textColor="@color/colorPrimary" />


            <Button
                android:id="@+id/create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/my_button_bg"
                android:onClick="createGroup"
                android:text="@string/create"
                android:textColor="@color/ofWhite" />


        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/mapLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fragment"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/white_shape"
            android:onClick="done"
            android:text="@string/Done"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="10dp" />

    </RelativeLayout>
</RelativeLayout>
